--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "brightbuy",
+  "homepage": "https://ze-n.github.io/brightbuy/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "firebase": "^9.22.1",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
